# MosaiQ-Singleton-FFT

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
docs/: 02_SINGLETON_CFFT_STRUCTURE.md
docs/legacy/: README.md
src/: SingletonFFT.cpp  SingletonFFT.hpp
src/detail/: PrimeRadix.hpp  compile_flags.txt
tests/: test_fft.cpp
